--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,8 @@ li, ul, div, h1, h2, h3, h4 {
 body {
   background-color: #aaa;
   background: url("../img/bg-bliss.jpg");
-  font-family: consolas, "lucida console"; }
+  font-family: consolas, "lucida console";
+  background-size: cover; }
 
 .logo {
   font-size: 14px;
