--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -31,6 +31,7 @@ body{
 	background-color:#aaa;
 	background: url('../img/bg-bliss.jpg');
 	font-family: consolas, "lucida console";
+	background-size:cover;
 }
 //logo
 header{
